# harmony-client

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/plans/: 2026-03-03-chat-ux-vision-design.md  2026-03-03-harmony-client-design.md  2026-03-06-network-viz-design.md  2026-03-06-network-viz-plan.md
src/: App.svelte  NetworkApp.svelte  app.css  network-main.ts  network.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: feed-utils.test.ts  feed-utils.ts  graph-utils.test.ts  graph-utils.ts  identicon.test.ts  identicon.ts  mock-data.ts  nav-utils.test.ts  nav-utils.ts  network-data-service.test.ts  network-data-service.ts  network-types.ts  notification-service.test.ts  notification-service.ts  random-utils.ts  ring-buffer.test.ts  ring-buffer.ts  trust-graph-service.test.ts  trust-graph-service.ts  trust-score.test.ts  trust-score.ts  trust-service.test.ts  trust-service.ts  types.ts  url-sanitize.test.ts  url-sanitize.ts
src/lib/components/: AriaAnnouncer.svelte  Avatar.svelte  ComposeBar.svelte  DataTable.svelte  DetailPanel.svelte  FloatingThreadBar.svelte  Layout.svelte  LinkDetail.svelte  MediaCard.svelte  MediaFeed.svelte  NavNodeRow.svelte  NavPanel.svelte  NavTree.svelte  NetworkGraph.svelte  NetworkStatusBar.svelte  NetworkToolbar.svelte  NodeDetail.svelte  NotificationSettingsPanel.svelte  ProfilePopover.svelte  QuietMessageGroup.svelte  Sparkline.svelte  TextFeed.svelte  TextMessage.svelte  ThreadIndicator.svelte  ThreadView.svelte  TrustBadge.svelte  (+3 more)
(+23 files in other folders)
