[package]
name = "harmony-app"
version = "0.1.0"
description = "Harmony Network Client"
authors = ["zeblithic"]
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
